# clear-habits

./: .grenrc  README.md  package-lock.json
.github/workflows/: deploy.yml  deploy_v2.yml  test.yml
client/: .env.development  .gitignore  README.md  package-lock.json  package.json  vue.config.js
client-ui-thing/: .prettierrc  app.config.ts  app.vue  codegen.ts  mutations.ts  nuxt.config.ts  package-lock.json  package.json  queries.ts  ui-thing.config.ts  vitest.config.js
client-ui-thing/components/: CategoryFilter.nuxt.spec.ts  CategoryFilter.vue  Entry.nuxt.spec.ts  Entry.vue
client-ui-thing/gql/: gql.ts  graphql.ts
client-ui-thing/graphql/: EntryFragment.gql  mutations.js  queries.js
client-ui-thing/pages/: index.vue  tasks.nuxt.spec.ts  tasks.vue
client-ui-thing/utils/: time.spec.ts  time.ts
client/public/: index.html
client/src/: App.vue  main.js  quasar.js  vue-apollo.js
conf/: .env.production.j2  .env.production.server.j2  limited_user_account.yml  nginx.conf  setup.yml  update.yml
fasthtml_apps/: alpine_assets.py  app.py  models.py  pyproject.toml
reflex_apps/: pyproject.toml  requirements.txt  rxconfig.py
reflex_apps/clearhabits/: clearhabits.py  models.py
server/: app.js  package-lock.json  package.json
server-graphql/: .mocharc.yaml  README.md  package-lock.json  package.json  tsconfig.json  webpack.development.js  webpack.production.js
server-graphql/migrations/: 20210116232300-feature-55.js
server-postgraphile/: .gmrc  CustomBuildHooksPlugin.js  README.md  config.js  env.sh  package-lock.json  package.json  server.js
(+214 files in other folders)
