[tool.poetry]
name = "clearhabits-client"
version = "0.1.0"
description = ""
authors = ["oliveryh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-fasthtml = "^0.2.1"
sqlmodel = "^0.0.21"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
